--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -113,6 +113,10 @@
   }
 
   * {
-    @apply border-border !important;
+    @apply border-border;
+  }
+
+  body {
+    @apply bg-background text-foreground;
   }
 }
